--- a/ccand/src/main/res/values/colors.xml
+++ b/ccand/src/main/res/values/colors.xml
@@ -2,5 +2,8 @@
 <resources>
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
+    <!--<color name="colorPrimary">#FD4A08</color>-->
+    <color name="colorLightGray">#D8D8D8</color>
     <color name="colorAccent">#FF4081</color>
+    <color name="common_blue">#92cbc5</color>
 </resources>
