--- a/ccand/src/main/res/values/styles.xml
+++ b/ccand/src/main/res/values/styles.xml
@@ -14,4 +14,36 @@
     <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
+    <style name="MainButton">
+        <item name="android:textSize">22sp</item>
+        <item name="android:textAllCaps">true</item>
+    </style>
+
+    <style name="FrameTitle">
+        <item name="android:textSize">29sp</item>
+        <item name="android:textAllCaps">false</item>
+    </style>
+
+    <style name="AttrLabel">
+        <item name="android:textSize">22sp</item>
+        <item name="android:textAllCaps">true</item>
+    </style>
+
+    <style name="FrameButton">
+        <item name="android:textSize">18sp</item>
+        <item name="android:background">@color/common_blue</item>
+        <item name="android:textAllCaps">false</item>
+        <item name="android:paddingLeft">5dp</item>
+        <item name="android:paddingRight">5dp</item>
+    </style>
+
+    <style name="DetailsLabel">
+        <item name="android:textSize">18sp</item>
+        <item name="android:textAllCaps">true</item>
+    </style>
+
+    <style name="DetailsValue">
+        <item name="android:textSize">18sp</item>
+        <item name="android:textAllCaps">true</item>
+    </style>
 </resources>
