check point: isPlayer for creature, about to get rid of

--- a/playerAnd/src/main/res/xml/player.xml
+++ b/playerAnd/src/main/res/xml/player.xml
@@ -36,6 +36,7 @@
 
     <player
         name="Baniyan"
+        creature="humanoid"
         cha="3d6"
         con="2d6+12"
         dex="2d6+1"
@@ -48,6 +49,7 @@
     </player>
     <player
         name="Aronian"
+        creature="humanoid"
         cha="3d6"
         con="3d6"
         dex="3d6+6"
@@ -60,6 +62,7 @@
     </player>
     <player
         name="Achielian"
+        creature="humanoid"
         cha="3d6"
         con="3d6+3"
         dex="3d6+3"
@@ -72,6 +75,7 @@
     </player>
     <player
         name="Agorian"
+        creature="humanoid"
         cha="3d6"
         con="3d6"
         dex="3d6+6"
@@ -84,6 +88,7 @@
     </player>
     <player
         name="Zeparian"
+        creature="humanoid"
         cha="3d6+2"
         con="3d6+3"
         dex="3d6+3"
@@ -96,6 +101,7 @@
     </player>
     <player
         name="Finarian"
+        creature="humanoid"
         cha="3d6"
         con="3d6+3"
         dex="3d6+2"
@@ -108,6 +114,7 @@
     </player>
     <player
         name="Zuzoan"
+        creature="humanoid"
         cha="2d6+6"
         con="3d6+6"
         dex="3d6+2"
@@ -120,6 +127,7 @@
     </player>
     <player
         name="Vinosean"
+        creature="humanoid"
         cha="3d6"
         con="3d6+6"
         dex="3d6+2"
@@ -132,6 +140,7 @@
     </player>
     <player
         name="Pruman"
+        creature="humanoid"
         cha="3d6"
         con="2d6+9"
         dex="2d6+9"
@@ -144,6 +153,7 @@
     </player>
     <player
         name="Relaphian"
+        creature="humanoid"
         cha="3d6+1"
         con="3d6+3"
         dex="3d6+3"
