--- a/playerAnd/src/main/res/xml/creatures.xml
+++ b/playerAnd/src/main/res/xml/creatures.xml
@@ -18,31 +18,31 @@
             <location
                 name="right leg"
                 hp="5"
-                roll="1-3" />
+                roll="3" />
             <location
                 name="left leg"
                 hp="5"
-                roll="4-6" />
+                roll="6" />
             <location
                 name="abdomen"
                 hp="6"
-                roll="7-9" />
+                roll="9" />
             <location
                 name="chest"
                 hp="6"
-                roll="10-12" />
+                roll="12" />
             <location
                 name="right arm"
                 hp="4"
-                roll="13-15" />
+                roll="15" />
             <location
                 name="left arm"
                 hp="4"
-                roll="16-18" />
+                roll="18" />
             <location
                 name="head"
                 hp="5"
-                roll="19-20" />
+                roll="20" />
         </locations>
         <skills>
             <skill name="acrobatics">57</skill>
