--- a/playerAnd/src/main/res/xml/player.xml
+++ b/playerAnd/src/main/res/xml/player.xml
@@ -1,44 +1,46 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <creature name="humanoid">
+    <creature
+        name="humanoid"
+        move="6">
         <locations base="(CON+SIZ)/5">
             <location
                 name="right leg"
                 hp="base+0.5"
-                roll="3" />
+                roll="3"/>
             <location
                 name="left leg"
                 hp="base+0.5"
-                roll="6" />
+                roll="6"/>
             <location
                 name="abdomen"
                 hp="base+1.5"
-                roll="9" />
+                roll="9"/>
             <location
                 name="chest"
                 hp="base+2.5"
-                roll="12" />
+                roll="12"/>
             <location
                 name="right arm"
                 hp="base"
-                roll="15" />
+                roll="15"/>
             <location
                 name="left arm"
                 hp="base"
-                roll="18" />
+                roll="18"/>
             <location
                 name="head"
                 hp="base+0.5"
-                roll="20" />
+                roll="20"/>
         </locations>
     </creature>
 
     <player
         name="Baniyan"
-        creature="humanoid"
         cha="3d6"
         con="2d6+12"
+        creature="humanoid"
         dex="2d6+1"
         help="Mountain Dwarf"
         int="2d6+6"
@@ -49,9 +51,9 @@
     </player>
     <player
         name="Aronian"
-        creature="humanoid"
         cha="3d6"
         con="3d6"
+        creature="humanoid"
         dex="3d6+6"
         help="Island Forest Elf"
         int="3d6+6"
@@ -62,9 +64,9 @@
     </player>
     <player
         name="Achielian"
-        creature="humanoid"
         cha="3d6"
         con="3d6+3"
+        creature="humanoid"
         dex="3d6+3"
         help="Cloud Elf"
         int="3d6+6"
@@ -75,9 +77,9 @@
     </player>
     <player
         name="Agorian"
-        creature="humanoid"
         cha="3d6"
         con="3d6"
+        creature="humanoid"
         dex="3d6+6"
         help="Deep Forest Elf"
         int="3d6+3"
@@ -88,9 +90,9 @@
     </player>
     <player
         name="Zeparian"
-        creature="humanoid"
         cha="3d6+2"
         con="3d6+3"
+        creature="humanoid"
         dex="3d6+3"
         help="Lake Human"
         int="3d6+3"
@@ -101,9 +103,9 @@
     </player>
     <player
         name="Finarian"
-        creature="humanoid"
         cha="3d6"
         con="3d6+3"
+        creature="humanoid"
         dex="3d6+2"
         help="Fire Horse Lord, Plains"
         int="3d6"
@@ -114,9 +116,9 @@
     </player>
     <player
         name="Zuzoan"
-        creature="humanoid"
         cha="2d6+6"
         con="3d6+6"
+        creature="humanoid"
         dex="3d6+2"
         help="Medusa"
         int="3d6+3"
@@ -127,9 +129,9 @@
     </player>
     <player
         name="Vinosean"
-        creature="humanoid"
         cha="3d6"
         con="3d6+6"
+        creature="humanoid"
         dex="3d6+2"
         help="Eastern Kingdom"
         int="2d6+6"
@@ -140,9 +142,9 @@
     </player>
     <player
         name="Pruman"
-        creature="humanoid"
         cha="3d6"
         con="2d6+9"
+        creature="humanoid"
         dex="2d6+9"
         help="Bird, Halfling"
         int="2d6+6"
@@ -153,9 +155,9 @@
     </player>
     <player
         name="Relaphian"
-        creature="humanoid"
         cha="3d6+1"
         con="3d6+3"
+        creature="humanoid"
         dex="3d6+3"
         help="Aquatic Lords"
         int="3d6+3"
