--- a/playerAnd/src/main/res/layout/frame_chars.xml
+++ b/playerAnd/src/main/res/layout/frame_chars.xml
@@ -3,13 +3,8 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:numberpicker="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/frame_chars"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-
-    android:layout_centerHorizontal="true"
-    android:layout_centerVertical="true"
-    android:layout_marginTop="20dp">
+    android:layout_height="wrap_content">
 
     <android.support.constraint.ConstraintLayout
         android:layout_width="wrap_content"
@@ -17,166 +12,236 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent">
 
+        <TextView android:id="@+id/str_help"
+                  style="@style/AttrHelp"
+                  android:layout_marginTop="@dimen/attr_margin_top_adjust"
+                  android:layout_width="@dimen/attr_help_width"
+                  android:layout_height="wrap_content"
+                  android:text="3d6"
+                  app:layout_constraintTop_toTopOf="parent"
+                  app:layout_constraintRight_toRightOf="parent"/>
+
         <com.travijuu.numberpicker.library.NumberPicker
             android:id="@+id/str_value"
             android:layout_width="@dimen/attr_value_width"
             android:layout_height="@dimen/attr_value_height"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
             android:layout_marginTop="@dimen/attr_margin_top_spacing"
-            numberpicker:min="3"
+            android:layout_marginRight="@dimen/attr_margin_right"
+            app:layout_constraintRight_toLeftOf="@id/str_help"
+            app:layout_constraintTop_toTopOf="parent"
             numberpicker:max="18"
-            numberpicker:value="11"
-            numberpicker:unit="1"/>
+            numberpicker:min="3"
+            numberpicker:unit="1"
+            numberpicker:value="11"/>
 
         <TextView
             android:id="@+id/str_label"
+            style="@style/AttrLabel"
             android:layout_width="@dimen/attr_label_width"
             android:layout_height="wrap_content"
-            style="@style/AttrLabel"
-            android:text="@string/attr_str"
-            android:layout_marginTop="@dimen/attr_margin_top_adjust"
             android:layout_marginRight="@dimen/attr_margin_right"
+            android:text="@string/attr_str"
+            app:layout_constraintRight_toLeftOf="@id/str_value"
             app:layout_constraintTop_toTopOf="@id/str_value"
-            app:layout_constraintRight_toLeftOf="@id/str_value"/>
+            app:layout_constraintBottom_toBottomOf="@id/str_value"/>
 
         <com.travijuu.numberpicker.library.NumberPicker
             android:id="@+id/con_value"
             android:layout_width="@dimen/attr_value_width"
             android:layout_height="@dimen/attr_value_height"
-            app:layout_constraintTop_toBottomOf="@id/str_value"
-            app:layout_constraintLeft_toLeftOf="@id/str_value"
             android:layout_marginTop="@dimen/attr_margin_top_spacing"
-            numberpicker:min="3"
+            app:layout_constraintLeft_toLeftOf="@id/str_value"
+            app:layout_constraintTop_toBottomOf="@id/str_value"
             numberpicker:max="18"
-            numberpicker:value="11"
-            numberpicker:unit="1"/>
+            numberpicker:min="3"
+            numberpicker:unit="1"
+            numberpicker:value="11"/>
 
         <TextView
             android:id="@+id/con_label"
+            style="@style/AttrLabel"
             android:layout_width="@dimen/attr_label_width"
             android:layout_height="wrap_content"
-            style="@style/AttrLabel"
+            android:layout_marginRight="@dimen/attr_margin_right"
             android:text="@string/attr_con"
-            app:layout_constraintTop_toTopOf="@id/con_value"
             app:layout_constraintRight_toLeftOf="@id/con_value"
-            android:layout_marginTop="@dimen/attr_margin_top_adjust"
-            android:layout_marginRight="@dimen/attr_margin_right"/>
+            app:layout_constraintBottom_toBottomOf="@id/con_value"
+            app:layout_constraintTop_toTopOf="@id/con_value"/>
+
+        <TextView android:id="@+id/con_help"
+                  style="@style/AttrHelp"
+                  android:layout_width="@dimen/attr_help_width"
+                  android:layout_height="wrap_content"
+                  android:text="3d6"
+                  android:layout_marginLeft="@dimen/attr_margin_right"
+                  app:layout_constraintLeft_toRightOf="@id/con_value"
+                  app:layout_constraintTop_toTopOf="@id/con_value"
+                  app:layout_constraintBottom_toBottomOf="@id/con_value"/>
 
         <com.travijuu.numberpicker.library.NumberPicker
             android:id="@+id/siz_value"
             android:layout_width="@dimen/attr_value_width"
             android:layout_height="@dimen/attr_value_height"
-            app:layout_constraintTop_toBottomOf="@id/con_value"
-            app:layout_constraintLeft_toLeftOf="@id/con_value"
             android:layout_marginTop="@dimen/attr_margin_top_spacing"
-            numberpicker:min="3"
+            app:layout_constraintLeft_toLeftOf="@id/con_value"
+            app:layout_constraintTop_toBottomOf="@id/con_value"
             numberpicker:max="18"
-            numberpicker:value="11"
-            numberpicker:unit="1"/>
+            numberpicker:min="3"
+            numberpicker:unit="1"
+            numberpicker:value="11"/>
 
         <TextView
             android:id="@+id/siz_label"
+            style="@style/AttrLabel"
             android:layout_width="@dimen/attr_label_width"
             android:layout_height="wrap_content"
-            style="@style/AttrLabel"
+            android:layout_marginRight="@dimen/attr_margin_right"
             android:text="@string/attr_siz"
-            app:layout_constraintTop_toTopOf="@id/siz_value"
+            app:layout_constraintBottom_toBottomOf="@id/siz_value"
             app:layout_constraintRight_toLeftOf="@id/siz_value"
-            android:layout_marginTop="@dimen/attr_margin_top_adjust"
-            android:layout_marginRight="@dimen/attr_margin_right"/>
+            app:layout_constraintTop_toTopOf="@id/siz_value"/>
+
+        <TextView android:id="@+id/siz_help"
+                  style="@style/AttrHelp"
+                  android:layout_width="@dimen/attr_help_width"
+                  android:layout_height="wrap_content"
+                  android:text="3d6"
+                  android:layout_marginLeft="@dimen/attr_margin_right"
+                  app:layout_constraintLeft_toRightOf="@id/siz_value"
+                  app:layout_constraintTop_toTopOf="@id/siz_value"
+                  app:layout_constraintBottom_toBottomOf="@id/siz_value"/>
 
         <com.travijuu.numberpicker.library.NumberPicker
             android:id="@+id/dex_value"
             android:layout_width="@dimen/attr_value_width"
             android:layout_height="@dimen/attr_value_height"
-            app:layout_constraintTop_toBottomOf="@id/siz_value"
-            app:layout_constraintLeft_toLeftOf="@id/siz_value"
             android:layout_marginTop="@dimen/attr_margin_top_spacing"
-            numberpicker:min="3"
+            app:layout_constraintLeft_toLeftOf="@id/siz_value"
+            app:layout_constraintTop_toBottomOf="@id/siz_value"
             numberpicker:max="18"
-            numberpicker:value="11"
-            numberpicker:unit="1"/>
+            numberpicker:min="3"
+            numberpicker:unit="1"
+            numberpicker:value="11"/>
 
         <TextView
             android:id="@+id/dex_label"
+            style="@style/AttrLabel"
             android:layout_width="@dimen/attr_label_width"
             android:layout_height="wrap_content"
-            style="@style/AttrLabel"
+            android:layout_marginRight="@dimen/attr_margin_right"
             android:text="@string/attr_dex"
-            app:layout_constraintTop_toTopOf="@id/dex_value"
+            app:layout_constraintBottom_toBottomOf="@id/dex_value"
             app:layout_constraintRight_toLeftOf="@id/dex_value"
-            android:layout_marginTop="@dimen/attr_margin_top_adjust"
-            android:layout_marginRight="@dimen/attr_margin_right"/>
+            app:layout_constraintTop_toTopOf="@id/dex_value"/>
+
+        <TextView android:id="@+id/dex_help"
+                  style="@style/AttrHelp"
+                  android:layout_width="@dimen/attr_help_width"
+                  android:layout_height="wrap_content"
+                  android:text="3d6"
+                  android:layout_marginLeft="@dimen/attr_margin_right"
+                  app:layout_constraintLeft_toRightOf="@id/dex_value"
+                  app:layout_constraintTop_toTopOf="@id/dex_value"
+                  app:layout_constraintBottom_toBottomOf="@id/dex_value"/>
 
         <com.travijuu.numberpicker.library.NumberPicker
             android:id="@+id/int_value"
             android:layout_width="@dimen/attr_value_width"
             android:layout_height="@dimen/attr_value_height"
-            app:layout_constraintTop_toBottomOf="@id/dex_value"
-            app:layout_constraintLeft_toLeftOf="@id/dex_value"
             android:layout_marginTop="@dimen/attr_margin_top_spacing"
-            numberpicker:min="3"
+            app:layout_constraintLeft_toLeftOf="@id/dex_value"
+            app:layout_constraintTop_toBottomOf="@id/dex_value"
             numberpicker:max="18"
-            numberpicker:value="11"
-            numberpicker:unit="1"/>
+            numberpicker:min="3"
+            numberpicker:unit="1"
+            numberpicker:value="11"/>
 
         <TextView
             android:id="@+id/int_label"
+            style="@style/AttrLabel"
             android:layout_width="@dimen/attr_label_width"
             android:layout_height="wrap_content"
-            style="@style/AttrLabel"
+            android:layout_marginRight="@dimen/attr_margin_right"
             android:text="@string/attr_int"
-            app:layout_constraintTop_toTopOf="@id/int_value"
+            app:layout_constraintBottom_toBottomOf="@id/int_value"
             app:layout_constraintRight_toLeftOf="@id/int_value"
-            android:layout_marginTop="@dimen/attr_margin_top_adjust"
-            android:layout_marginRight="@dimen/attr_margin_right"/>
+            app:layout_constraintTop_toTopOf="@id/int_value"/>
+
+        <TextView android:id="@+id/int_help"
+                  style="@style/AttrHelp"
+                  android:layout_width="@dimen/attr_help_width"
+                  android:layout_height="wrap_content"
+                  android:text="3d6"
+                  android:layout_marginLeft="@dimen/attr_margin_right"
+                  app:layout_constraintLeft_toRightOf="@id/int_value"
+                  app:layout_constraintTop_toTopOf="@id/int_value"
+                  app:layout_constraintBottom_toBottomOf="@id/int_value"/>
 
         <com.travijuu.numberpicker.library.NumberPicker
             android:id="@+id/ken_value"
             android:layout_width="@dimen/attr_value_width"
             android:layout_height="@dimen/attr_value_height"
-            app:layout_constraintTop_toBottomOf="@id/int_value"
-            app:layout_constraintLeft_toLeftOf="@id/int_value"
             android:layout_marginTop="@dimen/attr_margin_top_spacing"
-            numberpicker:min="3"
+            app:layout_constraintLeft_toLeftOf="@id/int_value"
+            app:layout_constraintTop_toBottomOf="@id/int_value"
             numberpicker:max="18"
-            numberpicker:value="11"
-            numberpicker:unit="1"/>
+            numberpicker:min="3"
+            numberpicker:unit="1"
+            numberpicker:value="11"/>
 
         <TextView
             android:id="@+id/ken_label"
+            style="@style/AttrLabel"
             android:layout_width="@dimen/attr_label_width"
             android:layout_height="wrap_content"
-            style="@style/AttrLabel"
+            android:layout_marginRight="@dimen/attr_margin_right"
             android:text="@string/attr_ken"
-            app:layout_constraintTop_toTopOf="@id/ken_value"
+            app:layout_constraintBottom_toBottomOf="@id/ken_value"
             app:layout_constraintRight_toLeftOf="@id/ken_value"
-            android:layout_marginTop="@dimen/attr_margin_top_adjust"
-            android:layout_marginRight="@dimen/attr_margin_right"/>
+            app:layout_constraintTop_toTopOf="@id/ken_value"/>
+
+        <TextView android:id="@+id/ken_help"
+                  style="@style/AttrHelp"
+                  android:layout_width="@dimen/attr_help_width"
+                  android:layout_height="wrap_content"
+                  android:text="3d6"
+                  android:layout_marginLeft="@dimen/attr_margin_right"
+                  app:layout_constraintLeft_toRightOf="@id/ken_value"
+                  app:layout_constraintTop_toTopOf="@id/ken_value"
+                  app:layout_constraintBottom_toBottomOf="@id/ken_value"/>
 
         <com.travijuu.numberpicker.library.NumberPicker
             android:id="@+id/cha_value"
             android:layout_width="@dimen/attr_value_width"
             android:layout_height="@dimen/attr_value_height"
-            app:layout_constraintTop_toBottomOf="@id/ken_value"
-            app:layout_constraintLeft_toLeftOf="@id/ken_value"
             android:layout_marginTop="@dimen/attr_margin_top_spacing"
-            numberpicker:min="3"
+            app:layout_constraintLeft_toLeftOf="@id/ken_value"
+            app:layout_constraintTop_toBottomOf="@id/ken_value"
             numberpicker:max="18"
-            numberpicker:value="11"
-            numberpicker:unit="1"/>
+            numberpicker:min="3"
+            numberpicker:unit="1"
+            numberpicker:value="11"/>
 
         <TextView
             android:id="@+id/cha_label"
+            style="@style/AttrLabel"
             android:layout_width="@dimen/attr_label_width"
             android:layout_height="wrap_content"
-            style="@style/AttrLabel"
+            android:layout_marginRight="@dimen/attr_margin_right"
             android:text="@string/attr_cha"
-            app:layout_constraintTop_toTopOf="@id/cha_value"
+            app:layout_constraintBottom_toBottomOf="@id/cha_value"
             app:layout_constraintRight_toLeftOf="@id/cha_value"
-            android:layout_marginTop="@dimen/attr_margin_top_adjust"
-            android:layout_marginRight="@dimen/attr_margin_right"/>
+            app:layout_constraintTop_toTopOf="@id/cha_value"/>
+
+        <TextView android:id="@+id/cha_help"
+                  style="@style/AttrHelp"
+                  android:layout_width="@dimen/attr_help_width"
+                  android:layout_height="wrap_content"
+                  android:text="3d6"
+                  android:layout_marginLeft="@dimen/attr_margin_right"
+                  app:layout_constraintLeft_toRightOf="@id/cha_value"
+                  app:layout_constraintTop_toTopOf="@id/cha_value"
+                  app:layout_constraintBottom_toBottomOf="@id/cha_value"/>
 
     </android.support.constraint.ConstraintLayout>
 
