--- a/playerAnd/src/main/res/layout/gen_content.xml
+++ b/playerAnd/src/main/res/layout/gen_content.xml
@@ -1,22 +1,56 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:layout_centerHorizontal="true"
-    app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.dugsolutions.playerand.act.GenActivity"
-    tools:showIn="@layout/gen_activity">
+                xmlns:app="http://schemas.android.com/apk/res-auto"
+                xmlns:tools="http://schemas.android.com/tools"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_centerHorizontal="true"
+                app:layout_behavior="@string/appbar_scrolling_view_behavior"
+                tools:context="com.dugsolutions.playerand.act.GenActivity"
+                tools:showIn="@layout/gen_activity">
 
     <TextView
-        android:id="@+id/frame_title"
-        style="@style/FrameTitle"
+        android:id="@+id/player_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="20dp" />
+        android:layout_marginTop="20dp"/>
+
+    <LinearLayout
+        android:id="@+id/race_frame"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="20dp"
+        android:orientation="horizontal">
+
+        <ImageView
+            android:id="@+id/prev_race"
+            android:layout_width="@dimen/arrow_size"
+            android:layout_height="@dimen/arrow_size"
+            android:src="@drawable/arrow_left"
+            android:scaleType="fitCenter"/>
+
+        <TextView
+            android:id="@+id/race_name"
+            android:layout_width="@dimen/race_label_width"
+            android:layout_height="match_parent"
+            android:layout_below="@id/player_name"
+            android:layout_centerHorizontal="true"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
+            android:gravity="center"
+            android:text="Race Name"/>
+
+        <ImageView
+            android:id="@+id/next_race"
+            android:layout_width="@dimen/arrow_size"
+            android:layout_height="@dimen/arrow_size"
+            android:src="@drawable/arrow_right"
+            android:scaleType="fitCenter"/>
+
+    </LinearLayout>
 
     <LinearLayout
         android:id="@+id/buttons"
@@ -34,7 +68,16 @@
             android:layout_height="wrap_content"
             android:layout_marginRight="10dp"
             android:text="@string/btn_prev"
-            android:textAllCaps="false" />
+            android:textAllCaps="false"/>
+
+        <Button
+            android:id="@+id/roll"
+            style="@style/FrameButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="10dp"
+            android:text="@string/btn_roll"
+            android:textAllCaps="false"/>
 
         <Button
             android:id="@+id/next"
@@ -43,10 +86,20 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
             android:text="@string/btn_next"
-            android:textAllCaps="false" />
+            android:textAllCaps="false"/>
     </LinearLayout>
 
-    <include layout="@layout/frame_chars"/>
+    <FrameLayout
+        android:id="@+id/frame_chars"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/race_frame"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="20dp">
+
+        <include layout="@layout/frame_chars"/>
+
+    </FrameLayout>
 
     <FrameLayout
         android:id="@+id/main_list_frame"
@@ -65,7 +118,7 @@
             android:layout_height="wrap_content"
             android:layout_margin="2dp"
             android:background="@drawable/background_shadow"
-            android:elevation="3dp" />
+            android:elevation="3dp"/>
 
         <TextView
             android:id="@+id/empty"
@@ -73,7 +126,7 @@
             android:layout_height="match_parent"
             android:text="@string/error_empty"
             android:textSize="25sp"
-            android:visibility="gone" />
+            android:visibility="gone"/>
 
     </FrameLayout>
 
