--- a/playerAnd/src/main/res/layout/main_content.xml
+++ b/playerAnd/src/main/res/layout/main_content.xml
@@ -10,7 +10,7 @@
     tools:showIn="@layout/main_activity">
 
     <Button
-        android:id="@+id/frame_title"
+        android:id="@+id/btn_create"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         style="@style/MainButton"
