--- a/playerAnd/src/main/res/values/dimens.xml
+++ b/playerAnd/src/main/res/values/dimens.xml
@@ -1,13 +1,16 @@
 <resources>
     <dimen name="fab_margin">16dp</dimen>
+    <dimen name="attr_help_width">70dp</dimen>
     <dimen name="attr_label_width">50dp</dimen>
     <dimen name="attr_value_width">130dp</dimen>
     <dimen name="attr_value_height">40dp</dimen>
     <dimen name="attr_margin_top_spacing">5dp</dimen>
-    <dimen name="attr_margin_top_adjust">10dp</dimen>
+    <dimen name="attr_margin_top_adjust">13dp</dimen>
     <dimen name="attr_margin_right">20dp</dimen>
     <dimen name="details_attr_spacing">15dp</dimen>
     <dimen name="details_attr_gap">5dp</dimen>
     <dimen name="details_attr_v_spacing">10dp</dimen>
+    <dimen name="arrow_size">40dp</dimen>
+    <dimen name="race_label_width">100dp</dimen>
 
 </resources>
