--- a/playerAnd/src/main/res/values/styles.xml
+++ b/playerAnd/src/main/res/values/styles.xml
@@ -24,6 +24,11 @@
         <item name="android:textAllCaps">false</item>
     </style>
 
+    <style name="RaceName">
+        <item name="android:textSize">22sp</item>
+        <item name="android:textAllCaps">false</item>
+    </style>
+
     <style name="AttrLabel">
         <item name="android:textSize">22sp</item>
         <item name="android:textAllCaps">true</item>
