--- a/playerAnd/src/main/res/layout/gen_content.xml
+++ b/playerAnd/src/main/res/layout/gen_content.xml
@@ -9,49 +9,13 @@
                 tools:context="com.dugsolutions.playerand.act.GenActivity"
                 tools:showIn="@layout/gen_activity">
 
-    <TextView
-        android:id="@+id/player_name"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="20dp"/>
-
-    <LinearLayout
-        android:id="@+id/race_frame"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="20dp"
-        android:orientation="horizontal">
-
-        <ImageView
-            android:id="@+id/prev_race"
-            android:layout_width="@dimen/arrow_size"
-            android:layout_height="@dimen/arrow_size"
-            android:src="@drawable/arrow_left"
-            android:scaleType="fitCenter"/>
-
-        <TextView
-            android:id="@+id/race_name"
-            style="@style/RaceName"
-            android:layout_width="@dimen/race_label_width"
-            android:layout_height="match_parent"
-            android:layout_below="@id/player_name"
-            android:layout_centerHorizontal="true"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
-            android:gravity="center"
-            android:text="Race Name"/>
-
-        <ImageView
-            android:id="@+id/next_race"
-            android:layout_width="@dimen/arrow_size"
-            android:layout_height="@dimen/arrow_size"
-            android:src="@drawable/arrow_right"
-            android:scaleType="fitCenter"/>
-
-    </LinearLayout>
+    <!--<TextView-->
+        <!--android:id="@+id/player_name"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_alignParentTop="true"-->
+        <!--android:layout_centerHorizontal="true"-->
+        <!--android:layout_marginTop="20dp"/>-->
 
     <LinearLayout
         android:id="@+id/buttons"
@@ -90,45 +54,45 @@
             android:textAllCaps="false"/>
     </LinearLayout>
 
-    <FrameLayout
-        android:id="@+id/frame_chars"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/race_frame"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="20dp">
-
-        <include layout="@layout/frame_chars"/>
-
+    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                 xmlns:tools="http://schemas.android.com/tools"
+                 android:id="@+id/fragment_container"
+                 android:layout_width="match_parent"
+                 android:layout_height="wrap_content"
+                 android:layout_alignParentTop="true"
+                 android:layout_centerHorizontal="true"
+                 android:layout_above="@id/buttons"
+                 android:layout_marginTop="10dp"
+                 tools:context=".act.GenRaceFragment">
     </FrameLayout>
 
-    <FrameLayout
-        android:id="@+id/main_list_frame"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_above="@id/buttons"
-        android:layout_below="@id/frame_title"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="20dp"
-        android:layout_marginTop="20dp"
-        android:visibility="gone">
+    <!--<FrameLayout-->
+        <!--android:id="@+id/main_list_frame"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_above="@id/buttons"-->
+        <!--android:layout_below="@id/frame_title"-->
+        <!--android:layout_centerHorizontal="true"-->
+        <!--android:layout_marginBottom="20dp"-->
+        <!--android:layout_marginTop="20dp"-->
+        <!--android:visibility="gone">-->
 
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/main_list"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="2dp"
-            android:background="@drawable/background_shadow"
-            android:elevation="3dp"/>
+        <!--<android.support.v7.widget.RecyclerView-->
+            <!--android:id="@+id/main_list"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_margin="2dp"-->
+            <!--android:background="@drawable/background_shadow"-->
+            <!--android:elevation="3dp"/>-->
 
-        <TextView
-            android:id="@+id/empty"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:text="@string/error_empty"
-            android:textSize="25sp"
-            android:visibility="gone"/>
+        <!--<TextView-->
+            <!--android:id="@+id/empty"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="match_parent"-->
+            <!--android:text="@string/error_empty"-->
+            <!--android:textSize="25sp"-->
+            <!--android:visibility="gone"/>-->
 
-    </FrameLayout>
+    <!--</FrameLayout>-->
 
 </RelativeLayout>
