--- a/playerAnd/src/main/res/layout/details_content.xml
+++ b/playerAnd/src/main/res/layout/details_content.xml
@@ -37,7 +37,7 @@
                 style="@style/DetailsLabel"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/attr_str" />
+                android:text="@string/char_str" />
 
             <TextView
                 android:id="@+id/str_value"
@@ -53,7 +53,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="@dimen/details_attr_spacing"
-                android:text="@string/attr_con" />
+                android:text="@string/char_con" />
 
             <TextView
                 android:id="@+id/con_value"
@@ -69,7 +69,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="@dimen/details_attr_spacing"
-                android:text="@string/attr_siz" />
+                android:text="@string/char_siz" />
 
             <TextView
                 android:id="@+id/siz_value"
@@ -95,7 +95,7 @@
                 style="@style/DetailsLabel"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/attr_dex"/>
+                android:text="@string/char_dex"/>
 
             <TextView
                 android:id="@+id/dex_value"
@@ -111,7 +111,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="@dimen/details_attr_spacing"
-                android:text="@string/attr_int"/>
+                android:text="@string/char_int"/>
 
             <TextView
                 android:id="@+id/int_value"
@@ -127,7 +127,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="@dimen/details_attr_spacing"
-                android:text="@string/attr_ken"/>
+                android:text="@string/char_ken"/>
 
             <TextView
                 android:id="@+id/ken_value"
@@ -143,7 +143,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="@dimen/details_attr_spacing"
-                android:text="@string/attr_cha"/>
+                android:text="@string/char_cha"/>
 
             <TextView
                 android:id="@+id/cha_value"
