--- a/playerAnd/src/main/res/layout/gen_race_fragment.xml
+++ b/playerAnd/src/main/res/layout/gen_race_fragment.xml
@@ -2,7 +2,7 @@
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
-             tools:context=".act.GenRaceFragment">
+             tools:context=".act.GenCharsFragment">
 
     <LinearLayout
         android:id="@+id/race_frame"
