--- a/playerAnd/src/main/res/layout/list_item_skill.xml
+++ b/playerAnd/src/main/res/layout/list_item_skill.xml
@@ -2,8 +2,24 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="horizontal">
+    android:orientation="horizontal"
+    android:layout_marginTop="5dp">
 
+    <TextView
+        android:id="@+id/skill_name"
+        style="@style/ListText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:layout_marginRight="10dp"
+        android:text="Skill"/>
 
+    <TextView
+        android:id="@+id/skill_value"
+        style="@style/ListText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:text="10%"/>
 
 </LinearLayout>
