--- a/playerAnd/src/main/res/layout/list_item_skill.xml
+++ b/playerAnd/src/main/res/layout/list_item_skill.xml
@@ -1,17 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="horizontal"
-    android:layout_marginTop="5dp">
+              android:layout_width="wrap_content"
+              android:layout_height="wrap_content"
+              android:layout_marginLeft="5dp"
+              android:layout_marginTop="5dp"
+              android:orientation="horizontal">
 
     <TextView
         android:id="@+id/skill_name"
         style="@style/ListText"
-        android:layout_width="wrap_content"
+        android:layout_width="130dp"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:layout_marginRight="10dp"
+        android:layout_marginRight="20dp"
         android:text="Skill"/>
 
     <TextView
@@ -19,7 +19,8 @@
         style="@style/ListText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
+        android:layout_gravity="left"
+        android:gravity="left"
         android:text="10%"/>
 
 </LinearLayout>
