--- a/playerAnd/src/main/res/layout/skills_fragment.xml
+++ b/playerAnd/src/main/res/layout/skills_fragment.xml
@@ -6,10 +6,10 @@
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/main_list"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_margin="2dp"
-        android:background="@drawable/background_shadow"
+        android:layout_gravity="center"
         android:elevation="3dp"/>
 
     <TextView
