--- a/playerAnd/src/main/res/menu/menu_main.xml
+++ b/playerAnd/src/main/res/menu/menu_main.xml
@@ -1,7 +1,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.dugsolutions.ccand.act.MainActivity">
+    tools:context="com.dugsolutions.playerand.act.MainActivity">
     <item android:id="@+id/action_settings" android:orderInCategory="100"
         android:title="@string/action_settings" app:showAsAction="never" />
 </menu>
